@@ -1,3 +1,7 @@
+2018-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added custom permissions for BE module, resolves #49
+
 2018-07-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added property for fetching value from multi-dimensional array, resolves #52
